--- a/centro medico/RDLC/default/AnaliticaPeticion.rdlc
+++ b/centro medico/RDLC/default/AnaliticaPeticion.rdlc
@@ -1151,7 +1151,7 @@
         <Top>0.25cm</Top>
         <Left>1.51458cm</Left>
         <Height>6.2143cm</Height>
-        <Width>17.40347cm</Width>
+        <Width>17.40348cm</Width>
         <Style />
       </Tablix>
       <Textbox Name="textbox3">
@@ -1526,6 +1526,18 @@ FROM         ANALITICAS</CommandText>
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
+        <Field Name="ID">
+          <DataField>ID</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="REFANALITICA">
+          <DataField>REFANALITICA</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="REFCONCEPTO">
+          <DataField>REFCONCEPTO</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
         <Field Name="CONCEPTO">
           <DataField>CONCEPTO</DataField>
           <rd:TypeName>System.String</rd:TypeName>
@@ -1545,7 +1557,7 @@ FROM         ANALITICAS</CommandText>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>CM2DataSet</rd:DataSetName>
-        <rd:SchemaPath>H:\jose\Trabajo1\project\inceme-master\centro medico\Logica\CM2DataSet.xsd</rd:SchemaPath>
+        <rd:SchemaPath>D:\Personal\Trabajo1\Salvas\centro medico\Logica\CM2DataSet.xsd</rd:SchemaPath>
         <rd:TableName>PacienteAnalitica</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
