actualizo script 0.0.0.1 para que funcione con sql2008

--- a/centro medico/RDLC/custom/cantizal/Factura.rdlc
+++ b/centro medico/RDLC/custom/cantizal/Factura.rdlc
@@ -1468,7 +1468,7 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>=First(Fields!CP.Value, "dsFactura")</Value>
+                    <Value>=First(Fields!CP.Value, "dsFactura") &amp; " " &amp; First(Fields!PACIENTE_LOCALIDAD.Value, "dsFactura") &amp; " " &amp; First(Fields!PACIENTE_PROVINCIA.Value, "dsFactura")</Value>
                     <Style />
                   </TextRun>
                 </TextRuns>
