actualizar un par de plantillas

--- a/centro medico/RDLC/custom/giroca/Paciente.rdlc
+++ b/centro medico/RDLC/custom/giroca/Paciente.rdlc
@@ -1613,7 +1613,7 @@ zVxj3OemOlUyEZrquU/EfIzhSEqzEJPHiOmg1su5aMv0fTsideV2uRYojcCXF7s69zkR3luIdjKR2cXE
 gUCgUCgUCgUCgUCgUCgUCgUCgUCgUCgUCg//2Q==</ImageData>
     </EmbeddedImage>
   </EmbeddedImages>
-  <Language>en-US</Language>
+  <Language>es-ES</Language>
   <ConsumeContainerWhitespace>true</ConsumeContainerWhitespace>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
   <rd:ReportID>3e866ae9-7915-4928-a1d4-f723acda814d</rd:ReportID>
